@@ -1,0 +1,281 @@
+/* XPM */
+static char *grep-current-dir_xpm[] = {
+/* width height num_colors chars_per_pixel */
+"    18    18      256            2",
+/* colors */
+"`` c #ffffff",
+"`. c #adb5d6",
+"`# c #8c9cc6",
+"`a c #7b9cce",
+"`b c #94a5ce",
+"`c c #94add6",
+"`d c #bddeef",
+"`e c #c6f7ff",
+"`f c #add6e7",
+"`g c #f7f7ff",
+"`h c #a5deff",
+"`i c #bdefff",
+"`j c #d6efff",
+"`k c #d6ffff",
+"`l c #e7ffff",
+"`m c #f7ffff",
+"`n c #56565a",
+"`o c #646367",
+"`p c #5d5c60",
+"`q c #bcbbb8",
+"`r c #949cbd",
+"`s c #e7c68c",
+"`t c #c6c6b5",
+"`u c #605d57",
+"`v c #e9edd1",
+"`w c #e9edcd",
+"`x c #f5fad8",
+"`y c #363929",
+"`z c #e7bd7b",
+"`A c #ffbd4a",
+"`B c #d68c52",
+"`C c #5e6056",
+"`D c #d5dab7",
+"`E c #b9be9a",
+"`F c #c7cca7",
+"`G c #9fa485",
+"`H c #262522",
+"`I c #65635d",
+"`J c #5f5e58",
+"`K c #51504b",
+"`L c #ce7b4a",
+"`M c #a57b84",
+"`N c #78796d",
+"`O c #abb18f",
+"`P c #9da081",
+"`Q c #a4a888",
+"`R c #a5a989",
+"`S c #b6bb99",
+"`T c #babea4",
+"`U c #c0c3a8",
+"`V c #bdc2a5",
+"`W c #52514c",
+"`X c #a59cbd",
+"`Y c #6a6b65",
+"`Z c #666a53",
+"`0 c #686868",
+"`1 c #626360",
+"`2 c #636461",
+"`3 c #61625e",
+"`4 c #61635d",
+"`5 c #75756f",
+"`6 c #6d6e64",
+"`7 c #52534b",
+"`8 c #ffffe9",
+".` c #d8deb4",
+".. c #dbe0b7",
+".# c #dae0b7",
+".a c #d5dbb3",
+".b c #d4d8b1",
+".c c #444738",
+".d c #ada584",
+".e c #5d5e54",
+".f c #9b9a9b",
+".g c #cbd2a8",
+".h c #c8cda9",
+".i c #c8cda8",
+".j c #c4c9a6",
+".k c #c6cba7",
+".l c #c2c7a4",
+".m c #b8bc9c",
+".n c #a7ab8d",
+".o c #3e3d37",
+".p c #adada5",
+".q c #848484",
+".r c #3b3c36",
+".s c #f0f3da",
+".t c #b7bb98",
+".u c #b4b898",
+".v c #b2b696",
+".w c #b0b495",
+".x c #adb192",
+".y c #a6a98c",
+".z c #a2a588",
+".A c #393b2e",
+".B c #c3c0b3",
+".C c #6a6a62",
+".D c #2f3124",
+".E c #202216",
+".F c #1f2115",
+".G c #1d1f14",
+".H c #1b1c11",
+".I c #16170d",
+".J c #0e1007",
+".K c #282720",
+".L c #000000",
+".M c #000000",
+".N c #000000",
+".O c #000000",
+".P c #000000",
+".Q c #000000",
+".R c #000000",
+".S c #000000",
+".T c #000000",
+".U c #000000",
+".V c #000000",
+".W c #000000",
+".X c #000000",
+".Y c #000000",
+".Z c #000000",
+".0 c #000000",
+".1 c #000000",
+".2 c #000000",
+".3 c #000000",
+".4 c #000000",
+".5 c #000000",
+".6 c #000000",
+".7 c #000000",
+".8 c #000000",
+"#` c #000000",
+"#. c #000000",
+"## c #000000",
+"#a c #000000",
+"#b c #000000",
+"#c c #000000",
+"#d c #000000",
+"#e c #000000",
+"#f c #000000",
+"#g c #000000",
+"#h c #000000",
+"#i c #000000",
+"#j c #000000",
+"#k c #000000",
+"#l c #000000",
+"#m c #000000",
+"#n c #000000",
+"#o c #000000",
+"#p c #000000",
+"#q c #000000",
+"#r c #000000",
+"#s c #000000",
+"#t c #000000",
+"#u c #000000",
+"#v c #000000",
+"#w c #000000",
+"#x c #000000",
+"#y c #000000",
+"#z c #000000",
+"#A c #000000",
+"#B c #000000",
+"#C c #000000",
+"#D c #000000",
+"#E c #000000",
+"#F c #000000",
+"#G c #000000",
+"#H c #000000",
+"#I c #000000",
+"#J c #000000",
+"#K c #000000",
+"#L c #000000",
+"#M c #000000",
+"#N c #000000",
+"#O c #000000",
+"#P c #000000",
+"#Q c #000000",
+"#R c #000000",
+"#S c #000000",
+"#T c #000000",
+"#U c #000000",
+"#V c #000000",
+"#W c #000000",
+"#X c #000000",
+"#Y c #000000",
+"#Z c #000000",
+"#0 c #000000",
+"#1 c #000000",
+"#2 c #000000",
+"#3 c #000000",
+"#4 c #000000",
+"#5 c #000000",
+"#6 c #000000",
+"#7 c #000000",
+"#8 c #000000",
+"a` c #000000",
+"a. c #000000",
+"a# c #000000",
+"aa c #000000",
+"ab c #000000",
+"ac c #000000",
+"ad c #000000",
+"ae c #000000",
+"af c #000000",
+"ag c #000000",
+"ah c #000000",
+"ai c #000000",
+"aj c #000000",
+"ak c #000000",
+"al c #000000",
+"am c #000000",
+"an c #000000",
+"ao c #000000",
+"ap c #000000",
+"aq c #000000",
+"ar c #000000",
+"as c #000000",
+"at c #000000",
+"au c #000000",
+"av c #000000",
+"aw c #000000",
+"ax c #000000",
+"ay c #000000",
+"az c #000000",
+"aA c #000000",
+"aB c #000000",
+"aC c #000000",
+"aD c #000000",
+"aE c #000000",
+"aF c #000000",
+"aG c #000000",
+"aH c #000000",
+"aI c #000000",
+"aJ c #000000",
+"aK c #000000",
+"aL c #000000",
+"aM c #000000",
+"aN c #000000",
+"aO c #000000",
+"aP c #000000",
+"aQ c #000000",
+"aR c #000000",
+"aS c #000000",
+"aT c #000000",
+"aU c #000000",
+"aV c #000000",
+"aW c #000000",
+"aX c #000000",
+"aY c #000000",
+"aZ c #000000",
+"a0 c #000000",
+"a1 c #000000",
+"a2 c #000000",
+"a3 c #000000",
+"a4 c #000000",
+"a5 c #000000",
+"a6 c #000000",
+"a7 c #000000",
+"a8 c #000000",
+/* pixels */
+"````````````````````````````````````",
+"````````````````````````````````````",
+"`````````````````.`#`a`a`b`.````````",
+"```````````````b`c`d`e`e`f`c`#``````",
+"`````````````.`c```g`e`h`i`e`c`b````",
+"`````````````b`d`j`i`i`e`e`e`f`a````",
+"`````````````a`e`i`e`k`k`k`k`e`a````",
+"`````````````a`e`h`i`k`l`l`l`j`a````",
+"`````````````b`f`i`e`k`l`m`m`d`#````",
+"`````````````.```n`o`p`q`m`m`.`r````",
+"```````````s`t`u`v`w`x`y`d`.`b``````",
+"`````````z`A`B`C`D`E`F`G`H`I`J`K````",
+"```````z`A`L`M`N`O`P`Q`R`S`T`U`V`W``",
+"`````z`A`L`M`X`Y`Z`0`1`2`1`3`3`3`4`5",
+"```s`A`L`M`X```6`7`8.`...#.#...a.b.c",
+"``.d`L`M`X````.e.f.g.h.i.j.k.l.m.n.o",
+"``.p.q`X``````.r.s.t.u.v.w.x.y.z.A.B",
+"``````````````.C.D.E.E.F.G.H.I.J.K``"
+};
