@@ -1,3 +1,7 @@
+2010-09-27  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-toolbar.el: Add grep and moccur toolbar item.
+
 2010-09-25  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el (anything-command-map-prefix-key): anything.
